Fix mobile image alignment on Projects page

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -279,8 +279,8 @@
 @media screen and (max-width: 600px) {
   .portfolios {
     grid-template-columns: 1fr;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .contact-content-con {
@@ -326,8 +326,8 @@
 
 @media screen and (max-width: 500px) {
   .portfolios {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
